--- a/src/Dev.IO/Views/Produtos/Edit.cshtml
+++ b/src/Dev.IO/Views/Produtos/Edit.cshtml
@@ -8,10 +8,14 @@
 <hr />
 <div class="row">
     <div class="col-md-10">
-        <form asp-action="Edit">
+        <form enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <input type="hidden" asp-for="Id" />           
+            <input type="hidden" asp-for="Id" />
+
+            <div class="form-group">
+                <label><b>@Model.Fornecedor.Nome</b></label>
+            </div>
 
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -25,16 +29,16 @@
             </div>
             <div class="form-group">
                 <label>Imagem atual</label>
-                <img src="~/wwwroot/imagens/@Model.ImagemUpload" class="control-label" sizes="width: 70px; height: 100px"/>
+                <img src="~/wwwroot/imagens/@Model.ImagemUpload" class="control-label" sizes="width: 70px; height: 100px" />
             </div>
 
 
             <div>
                 <label asp-for="ImagemUpload" class="control-label"></label>
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload"/>
+                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload" >
                     <label data-browse="Procurar" style="width: 400px" class="custom-file-label" for="ImagemUpload"></label>
-                    <label style="display: none" id="img_none"></label>
+                    <label style="display: none" id="img_nome"></label>
                 </div>
             </div>
 
@@ -57,12 +61,14 @@
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+
+    <script>
+        $('#ImagemUpload').change(function () {
+            $("#img_nome").text(this.file[0].name);
+            $("#img_nome")[0].style.display = 'block';
+
+        });
+    </script>
+
 }
-
-<script>
-    $('#ImagemUpload').change(function () {
-        $("img_nome").text(this.file[0].name);
-        $("img_nome")[0].style.display = 'block';
-
-    });
-</script>
