--- a/src/Dev.IO/Views/Produtos/Delete.cshtml
+++ b/src/Dev.IO/Views/Produtos/Delete.cshtml
@@ -1,57 +1,59 @@
 ﻿@model DevIO.App.ViewsModels.ProdutoViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir produto - " + Model.Nome;
 }
 
-<h1>Delete</h1>
+<h4>@ViewData["Title"]</h4>
+<h5 style="padding-top: 50px">Você tem certeza disto?</h5>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ProdutoViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+<div class="row">
+    <div class="col-md-4">
+        <img src="~/imagens/@Model.Imagem" alt="@Model.Imagem" style="width: 300px; height: 428px" />
+    </div>
+    <dl class="col-md-6">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Descricao)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Imagem)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Imagem)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Valor)
+        <dd class="col-sm-10">
+            @Model.Valor.ToString("C");
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Ativo)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Ativo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Fornecedor)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Fornecedor.Documento)
-        </dd class>
+        </dd>
+        <div>
+            <form asp-action="Delete">
+                <input type="submit" value="Excluir" class="btn btn-danger" />
+                <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
+            </form>
+        </div>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+
 </div>
