--- a/src/Dev.IO/Views/Produtos/Edit.cshtml
+++ b/src/Dev.IO/Views/Produtos/Edit.cshtml
@@ -54,7 +54,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a class="btn btn-info" href="javascrip:window.history.back()">Voltar</a>
+                <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
             </div>
         </form>
     </div>
