--- a/src/Dev.IO/Views/Fornecedores/Details.cshtml
+++ b/src/Dev.IO/Views/Fornecedores/Details.cshtml
@@ -1,13 +1,14 @@
 ﻿@model DevIO.App.ViewsModels.FornecedorViewModel
+@using DevIO.App.Extensions
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>@ViewData</h1>
 
 <div>
-    <h4>FornecedorViewModel</h4>
+    <h4>Informação somente leitura</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,13 +21,8 @@
             @Html.DisplayNameFor(model => model.Documento)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Documento)
+            @this.FormataDocumento(Model.TipoFornecedor, Model.Documento)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoFornecedor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoFornecedor)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ativo)
@@ -36,7 +32,10 @@
         </dd>
     </dl>
 </div>
+
+<partial name="_DetalhesEndereco" />
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-dark" asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a class="btn btn-info" asp-action="Index">Voltar</a>
 </div>
