--- a/src/Dev.IO/Views/Fornecedores/Index.cshtml
+++ b/src/Dev.IO/Views/Fornecedores/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<DevIO.App.ViewsModels.FornecedorViewModel>
+@using DevIO.App.Extensions
 
 @{
     ViewData["Title"] = "Lista de Fornecedores";
 }
 
-<h1>ViewData["Title"]</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a class="btn btn-info" asp-action="Create">Novo Fornecedor</a>
@@ -31,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Documento)
+                @this.FormataDocumento(item.TipoFornecedor, item.Documento)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ativo)
