--- a/src/Dev.IO/Views/Produtos/Index.cshtml
+++ b/src/Dev.IO/Views/Produtos/Index.cshtml
@@ -6,4 +6,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<p>
+    <a class="btn btn-info" asp-action="Create">Novo Produto</a>
+</p>
+
 <partial name="_ListarProdutos" />
