--- a/src/Dev.IO/Views/Shared/_Layout.cshtml
+++ b/src/Dev.IO/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Dev.IO - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Dev.IO - <email email-domain="gmail.com">contato</email> - <email>suporte</email>
         </div>
     </footer>
 
